--- a/gradle.properties
+++ b/gradle.properties
@@ -19,4 +19,4 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
-unsplash_access_key="Abk8KFsjSFs2P09pv-UA7GSb1IfNhMb0le06YcPnVEs"
+unsplash_access_key="Put Your One"
